--- a/AJAX_CODE/DadJokes/index.html
+++ b/AJAX_CODE/DadJokes/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Axios</title>
+    <title>Axios Now With Dad Jokes!</title>
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   </head>
