--- a/AJAX_CODE/TVShowSearch/index.html
+++ b/AJAX_CODE/TVShowSearch/index.html
@@ -12,9 +12,9 @@
 
 <body>
     <h1>TV Show Search</h1>
-    <form id="searchForm">
-        <input type="text" placeholder="TV Show Title" name="query">
-        <button>Search</button>
+    <form id = "searchForm">
+        <input type="text" placeholder="Tv Show Title" name="query">    
+        <button> Search </button>
     </form>
     <script src="app.js"></script>
 </body>
